--- a/Week3/Flexbox.html
+++ b/Week3/Flexbox.html
@@ -23,7 +23,7 @@
             <img src="https://via.placeholder.com/300x200" alt="Product">
             <div class="product-info">
                 <h3>Product Title</h3>
-                <p>This is a great product that you will love!</p>
+                <p>This is a great product that you will absolutly love!</p>
                 <button>Buy Now</button>
             </div>
         </div>
